tests/reference/asr-template_error_07-e57f5fc.stderr
semantic error: The number of parameters passed to 'r' is not correct
  --> tests/errors/template_error_07.f90:15:20
   |
15 |         require :: r(t)
   |                    ^^^^ 
